--- a/src/main/resources/templates/all-prod-page.html
+++ b/src/main/resources/templates/all-prod-page.html
@@ -4,6 +4,7 @@
 	<p>Informācijia par produktiem--></p>
 	<table> 
 		 <tr th:each="prod : ${package}">
+		 	<td th:text="${prod.getId()}"> </td>
 			<td th:text="${prod.getTitle()}"> </td>
 			<td th:text="${prod.getPrice()}"> </td>
 			<td th:text="${prod.getQuantity()}"> </td>
