--- a/src/main/resources/templates/update-prod-page.html
+++ b/src/main/resources/templates/update-prod-page.html
@@ -3,9 +3,33 @@
 	<p>Lūdzu ievadiet jaunu produktu</p>
 		<form action="#" th:action="@{/product/update/__${id}__}" th:object="${product}" method="post" >
 	
-			<input type="text" th:field="*{title}" >
-			<input type="text" th:field="*{price}" >
-			<input type="text" th:field="*{quantity}">
+			
+			<table>
+		
+			<tr>
+				<td> Ievadīt nosaukumu: </td>
+				<td> <input type="text" th:field="*{title}" > </td>
+				<td  th:if="${#fields.hasErrors('title')}" th:errors="*{title}"> </td>
+			</tr>
+			
+			<tr>
+				<td> Ievadīt cenu:  </td>
+				<td> <input type="text" th:field="*{price}" > </td>
+				<td  th:if="${#fields.hasErrors('price')}" th:errors="*{price}"> </td>		
+			
+			</tr>
+	
+	
+			<tr>
+				<td> Ievadīt daudzumu:  </td>
+				<td> <input type="text" th:field="*{quantity}" > </td>
+				<td  th:if="${#fields.hasErrors('quantity')}" th:errors="*{quantity}"> </td>		
+			
+			</tr>
+					
+			</table>
+			
+			
 			<button type="submit">Redigēt produktu</button>
 	
 		</form>	
